# Waffle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
WaffleApp/: CMakeLists.txt  main.cpp  test.cpp
WaffleApp/assets/: test.frag  test.vert
WaffleApp/src/: main.cpp
WaffleEngine/: CMakeLists.txt  WaffleEngine.cpp  WaffleEngine.hpp
WaffleEngine/Audio/: CMakeLists.txt
WaffleEngine/Core/: App.cpp  App.hpp  CMakeLists.txt  Entry.hpp  Layer.hpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
WaffleEngine/Input/: CMakeLists.txt  Input.cpp  Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
WaffleEngine/Renderer/: CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp
WaffleEngine/Scene/: CMakeLists.txt
WaffleEngine/Thread/: CMakeLists.txt
WaffleEngine/UI/: CMakeLists.txt  README.md  UI.cpp  UI.hpp  Window.cpp  Window.hpp
WaffleEngine/Util/: CMakeLists.txt  GLCheckError.hpp  Timer.cpp  Timer.hpp
WaffleEngine/include/: Waffle.hpp
WaffleEngine/src/: Waffle.cpp
